# two_phase_streaming

./: CMakeLists.txt  README.md  globals.cpp  globals.hpp  main.cpp  stats.cpp  stats.hpp  streamcom.cpp  streamcom.hpp  twophasepartitioner.cpp  twophasepartitioner.hpp
converter/: conversions.cpp  shuffler.cpp  shuffler.hpp  util.cpp  util.hpp
dbh/: dbh.cpp  dbh.hpp  globals.cpp  globals.hpp  main.cpp  stats.cpp  stats.hpp
modularity_calculator/: main.cpp
